tests/error/misc_errors/return_not_annotated_none1.py
from guppy.decorator import guppy


@guppy
def foo():
    return
